--- a/ifts6/src/index.html
+++ b/ifts6/src/index.html
@@ -8,6 +8,18 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+
+  <div class="container">
+    <div style="text-align:center">
+      <app-root></app-root>
+    </div>
+
+    <div style="text-align:center">
+      <app-login></app-login>
+    </div>
+  </div>
+
+  
+
 </body>
 </html>
